--- a/Movies/tests/Cinema.Movies.Domain.Tests.Unit/Cinema.Movies.Domain.Tests.Unit.csproj
+++ b/Movies/tests/Cinema.Movies.Domain.Tests.Unit/Cinema.Movies.Domain.Tests.Unit.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.7.0" />
+        <PackageReference Include="JunitXml.TestLogger" Version="3.0.114" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
