--- a/Movies/src/Cinema.Movies.Application/Cinema.Movies.Application.csproj
+++ b/Movies/src/Cinema.Movies.Application/Cinema.Movies.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="11.0.1" />
       <PackageReference Include="MediatR" Version="10.0.1" />
     </ItemGroup>
 
